Fix forbiddenapis and package-sanity failures of InductionPartitionedReachedSet
Two CI failures:

  * forbiddenapis rejects java.util.List#of, so the partition key is built with
    Guava's ImmutableList instead.
  * The automated nulls test of the package requires getPartitionKey to throw
    for a null state. It did not, because a missing component is mapped to a
    placeholder and a null state simply produced a key of placeholders. It now
    rejects a null state explicitly, like LocationMappedReachedSet does.

Verified with "ant forbiddenapis" (0 errors) and by running
org.sosy_lab.cpachecker.core.reachedset.PackageSanityTest (3 tests, 0 failures).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>